@@ -57,8 +57,8 @@ clean: clean_client clean_plugin clean_man clean_pluginprovider
 	find . -maxdepth 3 -name 'qrc_*.cpp' -exec rm -vf {} + -type f
 	rm -f x2goclient
 	rm -f x2goclient.tag
-	rm -f txt/changelog
-	rm -f txt/git-info
+	rm -f res/txt/changelog
+	rm -f res/txt/git-info
 
 clean_client:
 	rm -fr $(CLIENT_DIR)
